--- a/teste-backend/package.json
+++ b/teste-backend/package.json
@@ -4,10 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev --files -r tsconfig-paths/register --inspect --ignore-watch node_modules src/index.ts"
+    "start": "ts-node-dev --files -r tsconfig-paths/register --inspect --ignore-watch node_modules src/app.ts"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "@prisma/client": "^6.2.1",
+    "detect-port": "^2.1.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.17.3",
+    "prisma": "^6.2.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
