"estrutura do codigo Pré-definida"

--- a/teste-backend/tsconfig.json
+++ b/teste-backend/tsconfig.json
@@ -7,9 +7,8 @@
     "strictPropertyInitialization": false,
     "allowJs": true,
     "esModuleInterop": true,
-
+    "baseUrl": "./",
     "emitDecoratorMetadata": true,
-
     "experimentalDecorators": true
   }
 }
