--- a/teste-backend/package.json
+++ b/teste-backend/package.json
@@ -11,7 +11,8 @@
     "detect-port": "^2.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.17.3",
-    "prisma": "^6.2.1"
+    "prisma": "^6.2.1",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
