--- a/teste-backend/package.json
+++ b/teste-backend/package.json
@@ -8,11 +8,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "cors": "^2.8.5",
     "detect-port": "^2.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.17.3",
-    "prisma": "^6.2.1",
-    "cors": "^2.8.5"
+    "joi": "^17.13.3",
+    "prisma": "^6.2.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
