--- a/teste-backend/package.json
+++ b/teste-backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev --files -r tsconfig-paths/register --inspect --ignore-watch node_modules src/app.ts"
+    "start": "ts-node-dev --files -r tsconfig-paths/register --inspect --ignore-watch node_modules src/app.ts",
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
@@ -13,10 +14,16 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "joi": "^17.13.3",
+    "mysql2": "^3.12.0",
     "prisma": "^6.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.6.2"
