--- a/teste-backend/package.json
+++ b/teste-backend/package.json
@@ -8,22 +8,24 @@
     "test": "jest --runInBand"
   },
   "dependencies": {
-    "@prisma/client": "^6.2.1",
     "cors": "^2.8.5",
     "detect-port": "^2.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "joi": "^17.13.3",
-    "mysql2": "^3.12.0",
-    "prisma": "^6.2.1"
+    "mysql2": "^3.12.0"
   },
   "devDependencies": {
+    "@prisma/client": "^6.2.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.5.14",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "jest-html-reporter": "^3.10.2",
+    "prisma": "^6.2.1",
     "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.6.2"
